Fix issue where the quiz overlapped the content area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ header {
 #quiz-question {
     margin: 0 auto;
     width: 90%;
-    height: 40%;
+    height: auto;
     padding: 20px;
     background-color: #ffffff;
     border: 5px solid #000000;
@@ -93,14 +93,12 @@ header {
 .quiz-options-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    margin-top: 10px;
 }
 
 .quiz-option {
 
+    margin: 5%;
     padding: 10px;
-    margin: 30px;
     text-align: left;
 
     font-family: 'Manrope', sans-serif;
